<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Дитлоид 2</string>
    <string name="logo">logo</string>
    <string name="prefs_name">DitloidsSettings</string>
    <string name="arrow">Назад</string>
    <string name="start">играть</string>
    <string name="settings">настройки</string>
    <string name="rules">как играть?</string> 
    <string name="level">уровень 1</string>
    <string name="levels">выбор уровня</string>
    <string name="hints">подсказки:</string>
    <string name="hints_count">12</string>
    <string name="task_item">29 Д в Ф в В Г</string>
    <string name="enter_answer">введите ответ#8230;</string>
    <string name="countlv1">13</string>
    <string name="countlv2">7</string>
    <string name="countlv3">18</string>
    <string name="countlv4">3</string>
    <string name="reset_title">Сброс прогресса</string>
    <string name="reset_message">Сбросить прогресс?</string>
    <string name="unlock_levels_title">Покупка или восстановление дополнительных уровней.</string>
    <string name="unlock_levels_message">Купить или восстановить дополнительные уровни?</string>
    <string name="hint_title">Информация о подсказках.</string>
    <string name="hint_message">На данный момент у вас нет ни одной подсказки.</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>
    <string name="hint">Этот день бывает не каждый год, а лишь спустя определенный период времени</string> 
    <string name="faq_p1">
        Дитлоид - это зашифрованное при помощи аббревиатуры общеизвестное высказывание, название произведения или фраза из народного творчества. Дитлоид всегда начинается с цифры.\n
        \n 
        Принцип шифрования - в задании прописываются первые буквы слов фразы, все слова заглавными, предлоги (союзы, частицы и пр.) строчными, а цифры - цифрами.\n
        \n
        <b>Пример:</b>
    </string>
        <string name="faq_p2">24 Ч в С - 24 Часа в Сутках.</string>
    
    <string name="faq_p3">
        Игра делится на тематические уровни. Новый уровень открывается после выполнения определенного количества заданий предыдущих уровней.\n
        \n
        <b>Подсказки:</b>\n 
        В игре предусмотрена подсказка для каждого задания. Подсказка выдается за каждые 3 верно выполненных задания. Использовать подсказку можно в любое время.\n
        \n
        Приятной игры!
    </string>
    <string name="sfx_on">включить звуки</string>
    <string name="sfx_off">выключить звуки</string>
    <string name="music_on">включить музыку</string>
    <string name="music_off">выключить музыку</string>
    <string name="inapp_ok">Дополнительные уровни куплены</string>
    <string name="inap_error">Ошибка покупки</string>
    
    <string name="level1">
        Уровень 1\n
        \n
        «Классический»
    </string>
    <string name="level2">
        Уровень 2\n
        \n
        «Классический II»
    </string>
    <string name="level3">
        Уровень 3\n
        \n
        «Классический III»
    </string>
    <string name="level4">
        Уровень 4\n
        \n
        «Классический IV»
    </string>
    <string name="level5">
        Уровень 5\n
        \n
        «Художественный»
    </string>
    <string name="level6">
        Уровень 6\n
        \n
        «Пословицы и\n
        поговорки»
    </string>
    <string name="level7">
        Уровень 7\n
        \n
        «Календарный»
    </string>                            
</resources>
