<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:id="@+id/faqLayout"
    android:gravity="top"
    android:background="@drawable/fon"
    android:orientation="vertical" >  
    
    <Button
        android:id="@+id/imageView1"
        style="@style/header" />
    
	<TextView
	    android:id="@+id/textView1"
        style="@style/headerText"	        
	    android:text="@string/rules" />        
        
    <Button
        android:id="@+id/arrowButton"
        style="@style/arrow" />
    
    <ScrollView
        android:id="@+id/myview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
    	android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal" >

			<TextView
			    android:id="@+id/textView2"
			    style="@style/paragraph"			    	
				android:text="@string/faq_p1" />
			
			<TextView
			    android:id="@+id/textView3"
			    style="@style/example"			    	
				android:text="@string/faq_p2" />			

			<TextView
			    android:id="@+id/textView4"			    
			    style="@style/paragraph"	
				android:text="@string/faq_p3" />			
			
    	</LinearLayout>
    </ScrollView>
        
</RelativeLayout>