<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:id="@+id/entertaskLayout"
    android:gravity="top"
    android:orientation="vertical" >
    
    <Button
        android:id="@+id/imageView1"
        style="@style/header" />    

    <Button
        android:id="@+id/arrowButton"
        style="@style/arrow" />

	<TextView
	    android:id="@+id/textView1"
        style="@style/headerText"	        
	    android:text="@string/level" /> 
	    
	<TextView
	    style="@style/hints"       
	    android:text="@string/hints" />
	    
	<TextView
	    android:id="@+id/textView2"
	    style="@style/hints_count"        
	    android:text="@string/hints_count"/>     
	
	<TextView
	    android:id="@+id/textView3"
	    android:layout_width="300dp"
	    android:layout_height="110dp"
	    android:layout_below="@+id/textView1"
	    android:layout_centerHorizontal="true"
	    android:gravity="center_horizontal"
	    android:paddingTop="0dp"
	    android:layout_marginTop="15dp"
	    android:textSize="35sp"
	    android:textColor="#fff"    
	    android:text="@string/task_item"
	    android:background="#50c0e9"/>
	
	<TextView
	    android:id="@+id/textHint"
	    android:layout_width="250dp"
	    android:layout_height="45dp"
	    android:gravity="center"
	    android:textSize="12sp"           
	    android:layout_alignBottom="@+id/textView3"
	    android:layout_centerHorizontal="true"
	    android:layout_marginBottom="15dp"
	    android:textColor="#60778c"
	    android:text="@string/hint" />
	
	<Button
	    android:id="@+id/buttonHint"
	    android:layout_width="200dp"
	    android:layout_height="30dp"
	    android:gravity="center"      
	    android:layout_alignBottom="@+id/textView3"
	    android:layout_centerHorizontal="true"
	    android:layout_marginBottom="20dp"
	    android:textColor="#60778c"
	    android:background="@drawable/hint" />
	
	<EditText
	    android:id="@+id/editText1"
	    android:layout_width="265dp"
	    android:layout_height="40dp"
	    android:layout_below="@+id/textView3"
	    android:layout_alignParentLeft="true"
	    android:padding="9dp"
	    android:layout_marginTop="20dp"
	    android:layout_marginLeft="10dp"
	    android:textSize="13sp"
	    android:textColor="#212a33"    
	    android:ems="10"
	    android:background="@drawable/bg_input" 
	    android:hint="@string/enter_answer">
	
	    <requestFocus />	   	    
	</EditText>
	
	<Button
	    android:id="@+id/buttonCheck"
	    android:layout_width="40dp"
	    android:layout_height="40dp"
	    android:layout_alignParentRight="true"
	    android:layout_marginTop="20dp"
	    android:layout_marginRight="10dp"
	    android:layout_below="@+id/textView3"
	    android:background="@drawable/check" />	

</RelativeLayout>