<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/mainLayout"
    android:gravity="center_horizontal"
    android:background="@drawable/fon" >

    <ImageView
        android:id="@+id/imageView1"
        android:contentDescription="@string/logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ditloid" />
    
    <Button android:id="@+id/StartButton"
        android:layout_height="45dp" 
        android:layout_width="fill_parent"
        android:layout_marginTop="25dp" 	 
        android:background="#8ad5f0"
        android:text="@string/start"
        android:textColor="#fff"
        android:textSize="30sp"
        android:gravity="center" />

    <Button android:id="@+id/SettingsButton"
        android:layout_height="45dp" 
        android:layout_width="fill_parent" 	
        android:background="#d3e992"
        android:text="@string/settings"
        android:textColor="#fff"
        android:textSize="30sp"
        android:gravity="center" />
    
    <Button android:id="@+id/RulesButton"
        android:layout_height="45dp" 
        android:layout_width="fill_parent" 
        android:layout_marginBottom="55dp"		
        android:background="#ffafaf"
        android:text="@string/rules"
        android:textColor="#fff"
        android:textSize="30sp"
        android:gravity="center"  />        
</LinearLayout>