<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:gravity="top"
    android:id="@+id/tasksLayout"
    android:orientation="vertical" >
    
    <Button
        android:id="@+id/imageView1"
        style="@style/header" />     
 			
    <Button
        android:id="@+id/arrowButton"
        style="@style/arrow" />

	<TextView
	    android:id="@+id/textView1"
        style="@style/headerText"	       
	    android:text="@string/level" />  
	    
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
		android:layout_alignParentRight="true"   
	    android:gravity="center"
	    android:textSize="10sp"
	    android:textColor="#fff"    	 
	    android:layout_marginTop="12dp"
	    android:layout_marginRight="25dp"        
	    android:text="@string/hints" /> 
	    
	<TextView
	    android:id="@+id/textView2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
		android:layout_alignParentRight="true" 
	    android:layout_marginTop="9dp"
	    android:layout_marginRight="15dp"         
	    android:text="@string/hints_count"
	    android:textColor="#fff" 
	    android:textSize="14sp" />    
	    
	<ListView
		android:id="@+id/mylist"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="45dp"
		android:cacheColorHint="#00000000"
		android:divider="@drawable/divider">
	</ListView>

</RelativeLayout>
